Apply ACL awareness to Datafile count badges: Experiments

--- a/tardis/tardis_portal/templates/tardis_portal/experiment_tags/experiment_browse_item.html
+++ b/tardis/tardis_portal/templates/tardis_portal/experiment_tags/experiment_browse_item.html
@@ -32,7 +32,7 @@
   <div class="pull-right">
     {% experiment_datasets_badge experiment.id request.user %}
     &nbsp;
-    {{ experiment|experiment_datafiles_badge }}
+    {% experiment_datafiles_badge experiment request.user %}
     &nbsp;
     {{ experiment|experiment_last_updated_badge }}
   </div>
