Apply ACL awareness to Datafile size badge and image preview: Experiments

--- a/tardis/tardis_portal/templates/tardis_portal/experiment_tags/experiment_browse_item.html
+++ b/tardis/tardis_portal/templates/tardis_portal/experiment_tags/experiment_browse_item.html
@@ -18,10 +18,11 @@
       <span property="dc:author">{{ author.author }}</span>{% endfor %}
     </small>
   </h4>
-  {% if show_images and experiment.get_images.exists %}
+  {% experiment.get_images request.user as exp_get_img %}
+  {% if show_images and exp_get_img.exists %}
     <div class="image-preview">
       <span style="height: 28px"></span>
-    {% for datafile in experiment.get_images|slice:":10" %}
+    {% for datafile in exp_get_img|slice:":10" %}
       {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size=',28' rotation=0 quality='native' format='jpg' as thumbnail %}
       <img alt="Thumbnail for Datafile #{{datafile.id}}"
           src="{{ thumbnail }}"
