Make sensitive metadata viewable for downloadable+ permissions

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/dataset_metadata.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/dataset_metadata.html
@@ -25,7 +25,7 @@
    {% endif %}
   {% endcapture %}
     <div style="margin-top: 10px">
-        {% include "tardis_portal/ajax/parameter_table.html" with parameters=parameterset.datasetparameter_set.all %}
+        {% include "tardis_portal/ajax/parameter_table.html" with parameters=parameterset.datasetparameter_set.all downloadable=has_download_permissions %}
     </div>
 {% empty %}
     <div>
