--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameter_table.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameter_table.html
@@ -13,7 +13,7 @@
         </th>
     </tr>
     {% for parameter in parameters %}
-        {% if not parameter.sensitive_metadata %}
+        {% if not parameter.sensitive_metadata or downloadable %}
             {% if parameter.name.is_json %}
                 <tr>
                     <td class="parameter_name">{{ parameter.name.full_name }}</td>
