--- a/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/create_experiment.html
@@ -21,13 +21,13 @@
 	<div class="form-group row">
           <label class="col-form-label col-md-2 " for="title">Project Identifier (RaID)</label>
           <div class=" col-md-9 ">
-            {{ form.project_id | add_class:"form-control" }}
+            {{ form.project_model | add_class:"form-control" }}
           </div>
         </div>
 	<div class="form-group row">
           <label class="col-form-label col-md-2 " for="title">Experiment/Sample Identifier (RaID)</label>
           <div class=" col-md-9 ">
-            {{ form.internal_id | add_class:"form-control" }}
+            {{ form.raid | add_class:"form-control" }}
           </div>
         </div>
         <div class="form-group row">
@@ -37,12 +37,6 @@
             <p class="help-block mb-0">
                 Comma-separated authors and optional emails/URLs
             </p>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-form-label col-md-2 " for="institution_name">Institution name</label>
-          <div class=" col-md-9 ">
-           {{ form.institution_name | add_class:"form-control" }}
           </div>
         </div>
         <div class="form-group row">
