--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameteredit.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameteredit.html
@@ -25,7 +25,7 @@
             {% if not parameter.name.immutable %}
               <option value="{{parameter.name.name|parametername_form}}"
                       {% if parameter.name.isLongString %} data-longstring="true" {% endif %}>
-                {{parameter.name..full_name}} {% if parameter.name.units %}({{parameter.name.units}}){% endif %}
+                {{parameter.name.full_name}} {% if parameter.name.units %}({{parameter.name.units}}){% endif %}
               </option>
             {% endif %}
           {% endif %}
