--- a/assets/js/apps/search/components/TabStickers/TabSticker.css
+++ b/assets/js/apps/search/components/TabStickers/TabSticker.css
@@ -2,6 +2,7 @@
     border-radius: 50%;
     width:  1.5em;
     height: 1.5em;
+    padding: 1em;
     background-color: pink;
     display: flex;
     align-items: center;
