Add filters to search page

--- a/assets/js/apps/search/components/FilterSidebar.css
+++ b/assets/js/apps/search/components/FilterSidebar.css
@@ -1,5 +1,9 @@
 .filter-sidebar {
     max-width:350px;
-    background-color: lightgray;
-    padding:30px;
+    border: 1px solid lightgray;
+    padding: 30px;
+}
+
+.filter-sidebar > * {
+    padding-bottom:30px;
 }
