--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -1,6 +1,10 @@
 .preview-card__body {
-    background-color: bisque;
+    background-color: #fafafa;
     padding: 1.5rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #A6A3A3;
+    border-radius: 3px;
 }
 
 .preview-card__button-wrapper--right {
