Adjusted preview table styling.

--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -18,3 +18,10 @@
 .preview-card__button--right {
     display: block;
 }
+
+
+/* parameter table stuff below */
+
+.preview-card__parameter-table {
+    margin: 2rem 0rem;
+}
