WIP: tabstickers for preview cards.

--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -25,3 +25,9 @@
 .preview-card__parameter-table {
     margin: 2rem 0rem;
 }
+
+.preview-card__header {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+}
