Refactors access permission and count summary to components.

--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -7,6 +7,10 @@
     border-radius: 3px;
 }
 
+.preview-card__body > * {
+    padding: 0.2em 0em;
+}
+
 .preview-card__button-wrapper--right {
     text-align: right;
 }
