Fixed type assignment. Added missing fields to storybook mock data.

--- a/assets/js/apps/search/components/ResultSection.css
+++ b/assets/js/apps/search/components/ResultSection.css
@@ -19,6 +19,8 @@
     border-bottom: 1px solid #dee2e6;
     padding: 1em;
     padding-bottom: 2em;
+    display: flex;
+    flex-direction: row;
 }
 
 .result-section--count-summary {
