--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -1,7 +1,7 @@
 .preview-card__close {
-    position: absolute;
-    right: 5%;
-    top: 5%;
+    /* position: absolute; */
+    /* right: 5%; */
+    /* top: 5%; */
 }
 
 .preview-card__close button {
@@ -21,6 +21,7 @@
     border-width: 1px;
     border-color: #A6A3A3;
     border-radius: 3px;
+    /* width: 300px; */
 }
 
 .preview-card__body > * {
