--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -17,7 +17,7 @@
 }
 
 .preview-card__body {
-    /* background-color: #fafafa; */
+    background-color: #fafafa;
     padding: 1.5rem;
     /* border-style: solid;
     border-width: 1px; */
@@ -39,6 +39,7 @@
 }
 
 .preview-card__button--right {
+    padding-top: 0.5em;
     display: block;
 }
 
