--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -17,11 +17,11 @@
 }
 
 .preview-card__body {
-    background-color: #fafafa;
+    /* background-color: #fafafa; */
     padding: 1.5rem;
-    /* border-style: solid;
-    border-width: 1px; */
-    /* border-color: #A6A3A3; */
+    border-style: solid;
+    border-width: 1px;
+    border-color: #A6A3A3;
     /* border-radius: 3px; */
     width: 300px;
 }
