--- a/assets/js/apps/search/components/ResultSection.css
+++ b/assets/js/apps/search/components/ResultSection.css
@@ -19,12 +19,15 @@
     border-bottom: 1px solid #dee2e6;
     padding: 1em;
     padding-bottom: 2em;
+}
+
+.tabpanel__container--horizontal {
     display: flex;
     flex-direction: row;
 }
 
 .result-section--count-summary {
-    padding: 1em 0; 
+    padding: 1em 0;
 }
 
 .result-section__container {
