--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -20,9 +20,9 @@
     padding: 1.5rem;
     border-style: solid;
     border-width: 1px;
-    border-color: #A6A3A3;
+    border-color: #dee2e6;
     /* border-radius: 3px; */
-    width: 300px;
+    width: 500px;
 
     max-height: 400px;
     overflow-y: auto;
@@ -45,8 +45,6 @@
     display: block;
 }
 
-/* parameter table stuff below */
-
 .preview-card__parameter-table {
     margin: 2rem 0rem;
 }
@@ -55,6 +53,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 1em;
 }
 
 .preview-card__header > * {
