Add background colour to page

--- a/assets/js/apps/search/components/ResultSection.css
+++ b/assets/js/apps/search/components/ResultSection.css
@@ -19,6 +19,7 @@
     border-bottom: 1px solid #dee2e6;
     padding: 1em;
     padding-bottom: 2em;
+    background-color: white;
 }
 
 .result-section--count-summary {
