Adding uncommited files from previous search layout edits and grammer fixes.

--- a/assets/js/apps/search/components/ResultSection.css
+++ b/assets/js/apps/search/components/ResultSection.css
@@ -27,6 +27,10 @@
     flex-direction: row;
 }
 
+.tabpanel__container--horizontal > * {
+    flex: 1;
+}
+
 .result-section--count-summary {
     padding: 1em 0;
 }
