--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -22,7 +22,7 @@
     border-width: 1px;
     border-color: #dee2e6;
     /* border-radius: 3px; */
-    width: 500px;
+    /* width: 500px; */
 
     max-height: 400px;
     overflow-y: auto;
