Improve preview card layout (#92)
* Make entry preview card and result list independently scrollable

* Only select a row by pressing enter on focused row

* Highlight which entry is currently selected

* Remove redundant type, console log

* Fix search error layout

* Change loading message

* Fail remaining failing snapshot tests

* Entry preview card should open details in new window

--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -16,15 +16,11 @@
 }
 
 .preview-card__body {
-    /* background-color: #fafafa; */
     padding: 1.5rem;
     border-style: solid;
     border-width: 1px;
     border-color: #dee2e6;
-    /* border-radius: 3px; */
-    /* width: 500px; */
-
-    max-height: 400px;
+    flex: 0 1 450px;
     overflow-y: auto;
 }
 
