Fix add SSH key error

--- a/tardis/apps/sftp/templates/sftp/keys.html
+++ b/tardis/apps/sftp/templates/sftp/keys.html
@@ -62,11 +62,11 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-outline-secondary" style="margin: 0px 0px 10px 10px;" data-dismiss="modal" onclick="sftp.clearKeyAddForm()">
+        <button class="btn btn-outline-secondary" style="margin: 0px 0px 10px 10px;" data-dismiss="modal" onclick="sftp.clearKeyAddForm();return false;">
           <i class="fa fa-close"></i>
           Close
         </button>
-        <button class="btn btn-primary" style="margin: 0px 0px 10px 10px;" onclick="sftp.addKey()">
+        <button class="btn btn-primary" style="margin: 0px 0px 10px 10px;" onclick="sftp.addKey();return false;">
           <i class="fa fa-plus"></i>
           Add Key
         </button>
