Remove staticfiles ref

--- a/tardis/apps/push_to/templates/destination_selector.html
+++ b/tardis/apps/push_to/templates/destination_selector.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static %}
 {% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html ng-app="push-to">
