--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -2,7 +2,7 @@
 {% load render_bundle from webpack_loader %}
 {% load basiccomparisonfilters %}
 {% load capture %}
-{% load static from staticfiles %}
+{% load static %}
 {% load dynurl %}
 {% load jstemplate %}
 {% load bleach_tag %}
