--- a/tardis/apps/openid_migration/templates/migrate_accounts.html
+++ b/tardis/apps/openid_migration/templates/migrate_accounts.html
@@ -1,5 +1,5 @@
 {% extends "tardis_portal/portal_template.html" %}
-{% load static from staticfiles %}
+{% load static %}
 {% load widget_tweaks %}
 
 {% block script %}
